Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObject.quorum
class Main
    action Main
        text v = Test()
    end

    action Test() returns text
        Object var
        return var
    end
end